--- a/main/js_project/calculator/calc.html
+++ b/main/js_project/calculator/calc.html
@@ -30,51 +30,51 @@
             <div
                 class="place-items-center gap-2 *:border-gray-800 grid grid-cols-4 grid-rows-5 m-auto mt-3 *:p-4 *:border w-full h-full *:text-white *:text-xl *:uppercase">
 
-                <button class="rounded-2xl w-full h-full" id="c">
+                <button class="rounded-2xl w-full h-full" id="clr">
                     <p>C</p>
                 </button>
 
-                <button class="rounded-2xl w-full h-full">
+                <button class="rounded-2xl w-full h-full" id="allclr">
                     <p>AC</p>
                 </button>
 
-                <button class="rounded-2xl w-full h-full" id="mod">
+                <button class="rounded-2xl w-full h-full" id="module">
                     <p>%</p>
                 </button>
 
-                <button class="rounded-2xl w-full h-full">
+                <button class="rounded-2xl w-full h-full" id="divide">
                     <p>/</p>
                 </button>
 
-                <button class="rounded-2xl w-full h-full">
+                <button class="rounded-2xl w-full h-full" id="seven">
                     <p>7</p>
                 </button>
 
-                <button class="rounded-2xl w-full h-full">
+                <button class="rounded-2xl w-full h-full" id="eight">
                     <p>8</p>
                 </button>
 
-                <button class="rounded-2xl w-full h-full">
+                <button class="rounded-2xl w-full h-full" id="nine">
                     <p>9</p>
                 </button>
 
-                <button class="rounded-2xl w-full h-full">
+                <button class="rounded-2xl w-full h-full" id="multiply">
                     <p>*</p>
                 </button>
 
-                <button class="rounded-2xl w-full h-full">
+                <button class="rounded-2xl w-full h-full" id="four">
                     <p>4</p>
                 </button>
 
-                <button class="rounded-2xl w-full h-full">
+                <button class="rounded-2xl w-full h-full" id="five">
                     <p>5</p>
                 </button>
 
-                <button class="rounded-2xl w-full h-full">
+                <button class="rounded-2xl w-full h-full" id="six">
                     <p>6</p>
                 </button>
 
-                <button class="rounded-2xl w-full h-full">
+                <button class="rounded-2xl w-full h-full" id="sub">
                     <p>-</p>
                 </button>
 
@@ -82,31 +82,31 @@
                     <p>1</p>
                 </button>
 
-                <button class="rounded-2xl w-full h-full">
+                <button class="rounded-2xl w-full h-full" id="two">
                     <p>2</p>
                 </button>
 
-                <button class="rounded-2xl w-full h-full">
+                <button class="rounded-2xl w-full h-full" id="three">
                     <p>3</p>
                 </button>
 
-                <button class="rounded-2xl w-full h-full">
+                <button class="rounded-2xl w-full h-full" id="addition">
                     <p>+</p>
                 </button>
 
-                <button class="rounded-2xl w-full h-full">
+                <button class="rounded-2xl w-full h-full" id="zero">
                     <p>0</p>
                 </button>
 
-                <button class="rounded-2xl w-full h-full">
+                <button class="rounded-2xl w-full h-full" id="dzero">
                     <p>00</p>
                 </button>
 
-                <button class="rounded-2xl w-full h-full">
+                <button class="rounded-2xl w-full h-full" id="dot">
                     <p>.</p>
                 </button>
 
-                <button class="rounded-2xl w-full h-full">
+                <button class="rounded-2xl w-full h-full" id="equal">
                     <p>=</p>
                 </button>
 
