--- a/main/js_project/calculator/calc.html
+++ b/main/js_project/calculator/calc.html
@@ -13,14 +13,14 @@
             color: red;
             background-color: azure;
             transition-duration: 700ms;
-
+            .
         }
     </style>
 
 </head>
 
 <body class="bg-black">
-    <div class="flex justify-center items-center p-5 h-svh">
+    <!-- <div class="flex justify-center items-center p-5 h-svh">
         <div
             class="place-items-center border-2 border-white grid grid-rows-[10%_90%] shadow-inner shadow-white p-4 md:p-8 rounded-3xl w-[400px] h-[600px]">
             <div class="w-full">
@@ -112,103 +112,110 @@
 
             </div>
         </div>
-    </div>
+    </div> -->
 
 
-    <!-- 
+
     <div class="flex justify-center items-center p-5 h-svh">
         <div
             class="place-items-center border-2 border-white grid grid-rows-[10%_90%] shadow-inner shadow-white p-4 md:p-8 rounded-3xl w-[400px] h-[600px]">
             <div class="w-full">
-                <input type="text" placeholder="0" id="dis"
-                    class="text-right shadow-black shadow-inner p-2 rounded-md w-full text-2xl">
+                <!-- <input type="text" placeholder="0" id="output"
+                    class="text-right shadow-black shadow-inner p-2 rounded-md w-full text-2xl"> -->
+                <div id="secondout"
+                    class="text-right shadow-black shadow-inner p-2 rounded-md w-full text-2xl text-white">
+
+                </div>
+
+                <div id="output" class="text-right shadow-black shadow-inner p-2 rounded-md w-full text-2xl text-white">
+                </div>
             </div>
             <div
                 class="place-items-center gap-2 *:border-gray-800 grid grid-cols-4 grid-rows-5 m-auto mt-3 *:p-4 *:border w-full h-full *:text-white *:text-xl *:uppercase">
 
-                <button class="rounded-2xl w-full h-full calc">
+                <button class="rounded-2xl w-full h-full">
                     <p>C</p>
                 </button>
 
-                <button class="rounded-2xl w-full h-full calc">
+                <button class="rounded-2xl w-full h-full">
                     <p>AC</p>
                 </button>
 
-                <button class="rounded-2xl w-full h-full calc">
+                <button class="rounded-2xl w-full h-full calc sym">
                     <p>%</p>
                 </button>
 
-                <button class="rounded-2xl w-full h-full calc">
+                <button class="rounded-2xl w-full h-full calc sym">
                     <p>/</p>
                 </button>
 
-                <button class="rounded-2xl w-full h-full calc">
+                <button class="rounded-2xl w-full h-full calc num">
                     <p>7</p>
                 </button>
 
-                <button class="rounded-2xl w-full h-full calc">
+                <button class="rounded-2xl w-full h-full calc num">
                     <p>8</p>
                 </button>
 
-                <button class="rounded-2xl w-full h-full calc">
+                <button class="rounded-2xl w-full h-full calc num">
                     <p>9</p>
                 </button>
 
-                <button class="rounded-2xl w-full h-full calc">
+                <button class="rounded-2xl w-full h-full calc sym">
                     <p>*</p>
                 </button>
 
-                <button class="rounded-2xl w-full h-full calc">
+                <button class="rounded-2xl w-full h-full calc num">
                     <p>4</p>
                 </button>
 
-                <button class="rounded-2xl w-full h-full calc">
+                <button class="rounded-2xl w-full h-full calc num">
                     <p>5</p>
                 </button>
 
-                <button class="rounded-2xl w-full h-full calc">
+                <button class="rounded-2xl w-full h-full calc num">
                     <p>6</p>
                 </button>
 
-                <button class="rounded-2xl w-full h-full calc">
+                <button class="rounded-2xl w-full h-full calc sym">
                     <p>-</p>
                 </button>
 
-                <button class="rounded-2xl w-full h-full calc">
+                <button class="rounded-2xl w-full h-full calc num">
                     <p>1</p>
                 </button>
 
-                <button class="rounded-2xl w-full h-full calc">
+                <button class="rounded-2xl w-full h-full calc num">
                     <p>2</p>
                 </button>
 
-                <button class="rounded-2xl w-full h-full calc">
+                <button class="rounded-2xl w-full h-full calc num">
                     <p>3</p>
                 </button>
 
-                <button class="rounded-2xl w-full h-full calc">
+                <button class="rounded-2xl w-full h-full calc sym">
                     <p>+</p>
                 </button>
 
-                <button class="rounded-2xl w-full h-full calc">
+                <button class="rounded-2xl w-full h-full calc num">
                     <p>0</p>
                 </button>
 
-                <button class="rounded-2xl w-full h-full calc">
+                <button class="rounded-2xl w-full h-full calc num">
                     <p>00</p>
                 </button>
 
-                <button class="rounded-2xl w-full h-full calc">
+                <button class="rounded-2xl w-full h-full calc num">
                     <p>.</p>
                 </button>
 
-                <button class="rounded-2xl w-full h-full calc">
+                <button class="rounded-2xl w-full h-full calc equal">
                     <p>=</p>
                 </button>
 
             </div>
         </div>
-    </div> -->
+    </div>
 
     <script src="calc.js"></script>
 </body>
