--- a/main/js_project/calculator/calc.html
+++ b/main/js_project/calculator/calc.html
@@ -13,7 +13,7 @@
             color: red;
             background-color: azure;
             transition-duration: 700ms;
-            .
+
         }
     </style>
 
@@ -122,8 +122,7 @@
             <div class="w-full">
                 <!-- <input type="text" placeholder="0" id="output"
                     class="text-right shadow-black shadow-inner p-2 rounded-md w-full text-2xl"> -->
-                <div id="secondout"
-                    class="text-right shadow-black shadow-inner p-2 rounded-md w-full text-2xl text-white">
+                <div id="secondout" class="text-right shadow-black shadow-inner rounded-md w-full text-2xl text-white">
 
                 </div>
 
@@ -137,7 +136,7 @@
                     <p>C</p>
                 </button>
 
-                <button class="rounded-2xl w-full h-full">
+                <button class="rounded-2xl w-full h-full allclr">
                     <p>AC</p>
                 </button>
 
