--- a/main/js_project/calculator/calc.html
+++ b/main/js_project/calculator/calc.html
@@ -208,7 +208,7 @@
                     <p>.</p>
                 </button>
 
-                <button class="rounded-2xl w-full h-full calc equal">
+                <button class="rounded-2xl w-full h-full calc" id="equal">
                     <p>=</p>
                 </button>
 
