--- a/main/js_project/digital clock/digital.html
+++ b/main/js_project/digital clock/digital.html
@@ -11,7 +11,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            height: 100svh;
+            /* height: 100svh; */
             background-color: black;
             color: white;
             gap: 20px;
@@ -35,9 +35,9 @@
 </head>
 
 <body>
-    <button id="btn">
+    <!-- <button id="btn">
         Digital Clock
-    </button>
+    </button> -->
     <div id="clock">
     </div>
     <script src="clock.js"></script>
