--- a/main/js_project/Vowel_Counter/vowel.html
+++ b/main/js_project/Vowel_Counter/vowel.html
@@ -6,18 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=2.0">
     <title>Vowel Counter</title>
     <link rel="stylesheet" href="vowel.css">
+    <style>
+        body {
+            background-image: url("../image/2d-graphic-colorful-wallpaper-with-grainy-gradients.jpg");
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+    </style>
+
 </head>
 
-<body class="">
+<body class="h-100svh flex flex-col justify-center items-center gap-10">
     <div class="">
         <input type="text" placeholder="Enter Text.." id="text_">
-        <button class=" border-2 px-4 py-2 rounded-full" onclick="Count()" id="btn">click</button>
+        <button class="border-2 px-4 py-2 rounded-full" onclick="Count()" id="btn">click</button>
     </div>
-    <div>
+    <div class="flex flex-col gap-2">
         coutn of vowels:
         <p id="output">
         </p>
-        coutn of words:
+        count of words:
         <p id="word">
         </p>
     </div>
