--- a/main/js_project/Convertor/convertor.html
+++ b/main/js_project/Convertor/convertor.html
@@ -8,6 +8,9 @@
 </head>
 
 <body>
+    <input type="text" id="text">
+    <button onclick="celcius_()">celcius</button>
+    <button onclick="fahrenheit_()">fahrenheit</button>
 
     <script src="convert.js"></script>
 </body>
