--- a/main/js_project/Convertor/convertor.html
+++ b/main/js_project/Convertor/convertor.html
@@ -8,10 +8,17 @@
 </head>
 
 <body>
-    <input type="text" id="text">
+    <input type="number" id="text" placeholder="enter a number..">
+
     <button onclick="celcius_()">celcius</button>
     <button onclick="fahrenheit_()">fahrenheit</button>
 
+    <div id="fan">
+
+    </div>
+    <div id="cel">
+
+    </div>
     <script src="convert.js"></script>
 </body>
 
