--- a/main/js_project/To-Do-List/to_do.html
+++ b/main/js_project/To-Do-List/to_do.html
@@ -26,6 +26,16 @@
         .deleteButton:hover {
             background-color: white;
         }
+
+        .editButton {
+            padding: 10px;
+            margin-right: 5px;
+            background-color: rgb(159, 166, 173);
+        }
+
+        .editButton:hover {
+            background-color: white;
+        }
     </style>
 
 </head>
