--- a/main/js_project/To-Do-List/to_do.html
+++ b/main/js_project/To-Do-List/to_do.html
@@ -10,8 +10,12 @@
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
+        .div {
+            margin-bottom: 8px;
+        }
+
         .paragraph {
-            background-color: lightslategray;
+            background-color: rgb(145, 159, 173);
             width: 100svw;
             margin-right: 5px;
             padding: 6px;
@@ -49,7 +53,9 @@
 
         </div>
         <div id="wrapper" class="py-4 overflow-auto">
+
         </div>
+
 
     </div>
     <script src="todo.js"></script>
