--- a/main/js_project/To-Do-List/to_do.html
+++ b/main/js_project/To-Do-List/to_do.html
@@ -34,7 +34,8 @@
         .editButton {
             padding: 10px;
             margin-right: 5px;
-            background-color: rgb(159, 166, 173);
+            background-color: #9fa6ad;
+            color: black;
         }
 
         .editButton:hover {
