--- a/main/project/index.html
+++ b/main/project/index.html
@@ -19,7 +19,7 @@
 
 
             <div
-                class="relative before:absolute before:content-[''] border-b-4 border-yellow-400  ">
+                   class="relative before:absolute before:content-[''] border-b-4 border-yellow-400 before:top-4 after:-left-full ">
                 <p class="text-5xl ">I'M CHETAN DAVRA</p>
                 <p>WEB DESIGNER</p>
             </div>
